# dhge-programmieren

./: .gitignore  CMakeLists.txt
1/Aufgabe/: hello1.c
1/Loesung/: hello3-123.c  hello3-4.c  hello3-5.c
10/Loesung/: primfak1+ausg.c  primfak2+ausg.c  primfak2.c
11/Loesung/: alternative-sechser1b.c  sechser2.c
15/Loesung/: nagelbrett.c
17/Loesung/: lotto.c
20/Aufgabe/: demo0.c  demo1.c
20/Loesung/: fract-atan.c  fract.c  life.c  lissa.c  weihn-schnee.c
3/Aufgabe/: power-vorgabe.c
3/Loesung/: power.c
4/Loesung/: euklid-kuerzen.c
7/Loesung/: qsum-char.c
8/Loesung/: hex.c
9/Loesung/: minmax.c  minmaxpos.c
C/1/Aufgabe/: hello1.c  hello2.c  hello3-commented.c  hello3.c
C/1/Loesung/: hello3-6.c  hello3-7-var2.c  hello3-7.c
C/10/Aufgabe/: primfak.c
C/10/Loesung/: primfak1.c
C/11/Aufgabe/: sechser.c
C/11/Loesung/: alternative-sechser2b.c  sechser1.c
C/12/Aufgabe/: taschner.c
C/12/Loesung/: taschenr.c
C/13/Aufgabe/: dreieck.c
C/13/Loesung/: dreieck.c
C/14/Aufgabe/: noten.c
C/14/Loesung/: noten.c  punkte-senkr.c  punkte-waagr.c  punkte.c
C/15/Aufgabe/: nagelbrett.c
C/16/Aufgabe/: erat.c
C/16/Loesung/: erat.c
C/17/Aufgabe/: lotto.c
C/18/Aufgabe/: sortarray.c
C/18/Loesung/: sortarray.c
C/19/Aufgabe/: pascal.c
C/19/Loesung/: pascal.c
C/2/Aufgabe/: mittelw.c
C/2/Loesung/: mittelw.c
C/20/Aufgabe/: demo0.c  sdlinterf.c
C/20/Loesung/: fract-file.c  physik-ball.c  physik-schwingung.c  weihn-stern.c
C/30/: hilbert-main.c  peano-diag-main.c  peano-normal-main.c
C/35/: sort-ptr-angabe.c  sort-sdl-angabe.c
(+161 files in other folders)
